--- a/Prova_Estatistica_Inferencial.ipynb
+++ b/Prova_Estatistica_Inferencial.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVXlFJUgNVKBlNeO2m6wKg",
+      "authorship_tag": "ABX9TyMttS3LDQYC+5HENU4GMvFw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "# Prova de Estatística Inferencial\n",
         "MBA CDIA\n",
         "\n",
-        "Professor:\n",
+        "Professor: Allan Quadros\n",
         "\n",
         "Aluno: Sebastien Pierre Daniel Vassou"
       ],
@@ -211,7 +211,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "nRoi8bpwNPnV",
         "outputId": "a2d67133-a221-4d66-c2aa-f0c5366d89bb"
@@ -275,7 +276,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "M8qpfBFfN9j3",
         "outputId": "9dfd65e5-915c-46a7-8db4-c746125d0889"
@@ -374,7 +376,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "7JaY3yjWO6Fa",
         "outputId": "67ee5b8c-9f9a-4e41-866f-4c34d4d37ece"
