--- a/Exercicio001.ipynb
+++ b/Exercicio001.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdaf82X2WE6nyQjc/IBN1X",
+      "mount_file_id": "1voQxWdkBQkMVqUsAqmv9De_q6pc7L4uk",
+      "authorship_tag": "ABX9TyP2IVTqRb6cmu6rh3tNC0ho",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -153,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bTSroOWk8js3",
-        "outputId": "f9e666ee-28a4-4a26-ff00-679e1039a1af"
+        "outputId": "eff1f342-a189-4f2c-dbf4-85dcf98ed324"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,8 +174,8 @@
             "Diferença da média populacional: 42.16\n",
             "\n",
             "Amostragem por Conglomerados:\n",
-            "Média da amostra por Conglomerados: 1760.55\n",
-            "Diferença da média populacional: 46.36\n"
+            "Média da amostra por Conglomerados: 1527.18\n",
+            "Diferença da média populacional: 187.01\n"
           ]
         }
       ]
@@ -194,24 +195,23 @@
         "\n",
         "Diferença da média populacional: R$18,58\n",
         "\n",
-        "Análise: A amostragem aleatória simples gerou uma estimativa razoável da média populacional. A diferença de R$18,58 é relativamente pequena, mas não a mais precisa entre as amostras.\n",
+        "Análise: A AAS gerou uma estimativa da média populacional com uma pequena diferença. Isso reforça a confiabilidade da técnica para produzir amostras representativas, desde que a amostragem seja verdadeiramente aleatória.\n",
         "\n",
         "2. Amostragem Estratificada\n",
-        "Média da amostra: R$1712,01\n",
+        "Média da amostra: R$1756,35\n",
         "\n",
-        "Diferença da média populacional: R$2,18\n",
+        "Diferença da média populacional: R$42,16\n",
         "\n",
-        "Análise: A amostragem estratificada foi o método com o melhor desempenho. Ao garantir que cada estrato (cargo) estivesse representado na amostra, a estimativa da média ficou extremamente próxima da média real da população, com uma diferença de apenas R$2,18. Este resultado exemplifica a principal vantagem da amostragem estratificada: a capacidade de reduzir a variabilidade da amostra e produzir estimativas mais precisas.\n",
+        "Análise: Neste novo resultado, a amostragem estratificada produziu uma estimativa com uma diferença maior do que a AAS. Isso pode ocorrer dependendo da forma como os estratos são definidos e da natureza da população. Ainda assim, a técnica garante que a amostra mantém a proporção de cada grupo, o que é fundamental para evitar vieses.\n",
         "\n",
         "3. Amostragem por Conglomerados\n",
-        "Média da amostra: R$2051,33\n",
+        "Média da amostra: R$1527,18\n",
         "\n",
-        "Diferença da média populacional: R$337,14\n",
+        "Diferença da média populacional: R$187,01\n",
         "\n",
-        "Análise: A amostragem por conglomerados foi o método com a estimativa menos precisa. A amostra, composta por todos os servidores de 50 cargos selecionados aleatoriamente, resultou em uma média significativamente maior que a da população. Isso demonstra que, embora seja um método prático para grandes populações, a amostragem por conglomerados pode ter uma variabilidade maior e gerar uma estimativa menos representativa da média populacional.\n",
+        "Análise: A amostragem por conglomerados apresentou uma média de amostra significativamente menor que a da população, com uma diferença de R$187,01. Esse resultado reforça que a variabilidade da amostra é alta com essa técnica. A cada nova execução, a média da amostra pode flutuar bastante, pois a amostra é composta por grupos inteiros, e a composição desses grupos pode ser muito diferente uns dos outros.\n",
         "\n",
-        "Conclusão\n",
-        "A amostragem estratificada se mostrou a técnica mais eficiente para este dataset, produzindo a estimativa mais precisa da média populacional. Já a amostragem aleatória simples apresentou uma boa estimativa, mas menos precisa que a estratificada. Por fim, a amostragem por conglomerados, embora funcional, teve o pior desempenho em termos de precisão para este cenário, com a estimativa mais distante da média real da população."
+        "Com base neste conjunto de resultados, a amostragem aleatória simples (AAS) apresentou a estimativa mais precisa da média populacional, com a menor diferença. A amostragem estratificada, apesar de ser uma técnica poderosa, mostrou neste caso um desempenho ligeiramente inferior ao da AAS. A amostragem por conglomerados demonstrou a maior variabilidade, o que é uma característica intrínseca do método."
       ],
       "metadata": {
         "id": "7wYbarBh9qao"
