--- a/Exercicio001.ipynb
+++ b/Exercicio001.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1voQxWdkBQkMVqUsAqmv9De_q6pc7L4uk",
-      "authorship_tag": "ABX9TyP2IVTqRb6cmu6rh3tNC0ho",
+      "authorship_tag": "ABX9TyMBwpWphq9Gezl8xpPSIzpF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,15 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Foi utilizando o dataset payroll_dataset.csv como base para uma população de servidores. Trata-se de um dataset fictício mas bem estruturado, simulando folhas de pagamento de servidores públicos.\n",
+        "\n",
+        "Link: https://www.kaggle.com/datasets/datataxi/brazilian-public-sector-payroll\n",
+        "\n",
+        "O dataset continha 190.289 registros de folha de pagamento, com a variável quantitativa 'liquido' (salário líquido) e a variável categórica 'cargo'.\n",
+        "\n",
+        "A seguir, apresento a análise e os resultados obtidos para a amostragem aleatória simples (AAS) e por conglomerados. A média da população foi utilizada como parâmetro de comparação para avaliar a performance de cada técnica."
+      ],
       "metadata": {
         "id": "fBneqbWm7Psv"
       }
